<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.fragments.myday.DayFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/myDaylabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            style="@style/PlayFairSC"
            android:layout_marginTop="20dp"
            android:text="@string/my_day"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/profileView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_profile"
            android:layout_marginTop="25dp"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:layout_marginEnd="20dp"/>



        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/myDaylabel"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            style="@style/ManropeRegular"
            android:textStyle="bold"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/daily_motivation"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/icon_left" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerTextView"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            app:cardBackgroundColor="@color/WhiteSmoke"
            android:layout_marginTop="12dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/quoteIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/quote_icon"
                    android:src="@drawable/icon_60"
                    app:tint="@android:color/black" />

                <TextView
                    android:id="@+id/quoteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:lineSpacingExtra="4dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/dateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            style="@style/ManropeRegular"
            android:textStyle="bold"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text=""
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_calendaor" />

        <androidx.cardview.widget.CardView

            android:id="@+id/addStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#F5F5F5"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/add_icon"
                    android:src="@drawable/ic_add"
                    app:tint="#A0A0A0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="serif"
                    style="@style/ManropeRegular"
                    android:textStyle="bold"
                    android:text="@string/add_story_of_the_day"
                    android:textColor="#A0A0A0"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addStory"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/reflectTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PlayFairSC"
                android:text="@string/reflect_on_my_life"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_below="@id/reflectTitle">

                <androidx.cardview.widget.CardView
                    android:id="@+id/goodDayCard"
                    android:layout_width="0dp"
                    android:layout_height="152dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="2"
                    android:clickable="true"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_smile"
                            android:contentDescription="@string/smile_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/my_good_times"
                            android:ems="4"
                            android:maxLines="2"
                            style="@style/ManropeRegular"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/neutralDayCard"
                    android:layout_width="0dp"
                    android:layout_height="152dp"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:layout_marginEnd="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_normal"
                            android:contentDescription="@string/cloud_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/my_neutral_days"
                            android:ems="4"
                            style="@style/ManropeRegular"
                            android:maxLines="2"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/roughDayCard"
                    android:layout_width="0dp"
                    android:layout_height="152dp"
                    app:cardCornerRadius="12dp"
                    android:clickable="true"
                    android:layout_weight="2"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_cloud"
                            android:contentDescription="@string/rough_cloud" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/my_rougher_times"
                            android:ems="4"
                            android:maxLines="4"
                            style="@style/ManropeRegular"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

</ScrollView >