<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF6EA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_person"
            android:layout_marginBottom="20dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_account"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            app:startIconDrawable="@drawable/ic_calendar_30"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:startIconDrawable="@drawable/ic_phone"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            android:layout_marginBottom="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_up"
            android:backgroundTint="#DEAB3C"
            android:textColor="@color/black"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:id="@+id/viewLa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/continueAsGuestLayout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Or"
                android:gravity="center"
                android:layout_weight="0.5"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@color/black"/>
        </LinearLayout>


        <Button
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:id="@+id/elevatedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_in_with_google"
            android:layout_below="@id/viewLa"
            android:textColor="@color/white"
            app:icon="@drawable/gsign"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            app:iconGravity="textStart"
            app:iconTint="@null"
            android:backgroundTint="@color/GoogleSign"/>

    </LinearLayout>


</ScrollView>
