<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.fragments.funactivity.mindfulness.MindfulnessActivity">


    <FrameLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:layout_gravity="bottom"
        android:visibility="gone"/>

        <TextView
            android:id="@+id/timerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/zerio"
            android:fontFamily="@font/play_sc"
            android:textSize="40sp"/>
    </FrameLayout>

    <TextView
        android:id="@+id/activityCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/activity_completed"
        android:textSize="35sp"
        android:visibility="gone"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_home"
        android:fontFamily="@font/manrope_regular"
        style="@style/OnboardingButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/WhiteSmoke"
        android:textSize="18sp"
        android:backgroundTint="@color/Olive"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:visibility="gone"/>

</RelativeLayout>